<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splasha_activity_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FeedFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/create_recipe"
            android:backgroundTint="@color/light_brown"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/search_by_category"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search_by_category"
            android:backgroundTint="@color/light_brown" />
        <Button
            android:id="@+id/search_by_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search_by_text"
            android:backgroundTint="@color/light_brown" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>