<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper03"
    tools:context=".Acitivites.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:foreground="@drawable/border"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/camera"
                android:src="@drawable/baseline_add_a_photo_24"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/gallery"
                android:src="@drawable/baseline_add_file_alternate_24"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name"
            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="150dp"
            android:hint="@string/ingridents"
            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:id="@+id/ingridients"
                android:textStyle="bold"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="150dp"
            android:hint="@string/instructions"
            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:id="@+id/instructions"
                android:layout_height="match_parent"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:textStyle="bold">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="numberSigned"
                android:id="@+id/duration"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose a category"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />

            <RadioGroup
                android:id="@+id/categoryRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RadioButton
                android:id="@+id/beef_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Beef"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/dairy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dairy"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/fish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fish"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/vegan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vegan"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/cocktails_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cocktails"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/desserts_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/carrot_orange"
                android:text="Desserts"
                android:textStyle="bold"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>


<Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/carrot_orange"
            android:text="@string/create"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

    </LinearLayout>


</ScrollView>